------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

January 5 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Intact and broken battle-axe, bastard sword, scythe and club pictures added
	  to item.pcx by Kahvi
	* Ghost of Brezhnev added to char.pcx by Kahvi
	* New basic weapons added: bastard sword, battle-axe and scythe
	* Implemented an AD&D style weapon categorization, which I found much more
	  balanced than our old one
	* If the handle of a weapon is made of same material as the edge, SoCM alters
	  it, too
	* Added a gum solution to prevent whips of thievery from stealing the
	  Justifier; this was a too easy way to get rid of Petrus
	* For clarity, polymorphed monsters now leave the corpse of the original form
	* Seges and Petrus no longer cure non-living bodyparts
	* Gods, Petrus and angels no longer put back non-living bodyparts
	* When trying to use a stethoscope without hands, the game now behaves a
	  little less idiotically
	* Restructured all wand code: beam colors and beam effect & style indices now
	  come from the script and the actual effect code is located in level.cpp and
	  lsquare.cpp
	* All wand specializations are now configurations of wand
	* Removed wands of locking; they were completely useless
	* Wand of invisibility's beam is now invisible
	* Wand of polymorph's beam now changes color all the time
	* Wand of door creation can now create doors to walls
	* Added wand of lightning which uses a special lightning beam which bounces
	  from walls
	* Rewrote the (formelly unused) lightning animation code
	* Added thunder hammer which uses lightning animation and occasionally shoots
	  lightning bolts
	* Added ring of electricity resistance